fix(yml): set markdown to use kradown for Latex

--- a/_config.yml
+++ b/_config.yml
@@ -226,3 +226,7 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+markdown: kramdown
+kramdown:
+  math_engine: mathjax
